prevent logo overlapping menu

--- a/source/_patterns/03-organisms/headers/wwu-header/_wwu-header.scss
+++ b/source/_patterns/03-organisms/headers/wwu-header/_wwu-header.scss
@@ -59,6 +59,7 @@
     position: relative;
     z-index: 2;
     width: $logo-size + $double-spacing;
+    height: $logo-size;
     margin: auto;
     padding-right: $toggle-size;
 
